# bdr_uploader_hub_project

./: README.md  db_backup.json  dependabot.yaml  fast-api-plan.md  improve_tests_plan.md  manage.py  oclc_fastapi_implementation_directives.md  oclc_fastapi_implementation_plan.md  pyproject.toml  requirements.txt  run_tests.py  sample_dotenv.txt  self_updater.py  test_runner.py
.github/: dependabot.yaml  dependabot.yml  dependabot.yml.disabled
.github/workflows/: ci_tests.yaml  tests.yaml
bdr_deposits_uploader_app/: admin.py  apps.py  models.py  signals.py  tests.py  views.py
bdr_deposits_uploader_app/bdr_deposits_uploader_app_templates/: OLD__config_slug.html  base.html  config_new.html  config_slug.html  info.html  mods_base.html  mods_base.xml  staff_form.html  staff_form_BACKUP.html  student_confirm.html  student_form.html  upload_success.html  uploader_select.html  uploader_slug.html  xml_mods.xml  xml_rights.xml
bdr_deposits_uploader_app/forms/: staff_form.py  staff_form_validation.py  student_form.py  student_upload_form.py
bdr_deposits_uploader_app/lib/: config_new_helper.py  ingester_handler.py  mods_handler.py  shib_handler.py  uploaded_file_handler.py
bdr_deposits_uploader_app/tests/: test_mods_maker.py  (+1 more)
bdr_student_uploader_hub_app/: apps.py  models.py  signals.py  views.py
bdr_uploader_hub_app/: admin.py  apps.py  models.py  signals.py  views.py
config/: dotenv_example_file.txt  settings.py  settings_run_tests.py  urls.py  wsgi.py
requirements/: base.in  local.in  local.txt  production.in  production.txt  staging.in  staging.txt
(+54 files in other folders)
